Blender 2.8 particle system error #59924

Closed
opened 2018-12-28 12:51:44 +01:00 by garyshin · 11 comments

System Information
Operating system: win8.1 64bit
Graphics card: gtx 1060 4GB

Blender Version
Broken: blender-2.80-0661bcba3210-win64
28, Dec, 18

Worked: (optional)

Short description of error

when running keyed particle system, if the base object has complicated(?)mesh or rather say a lot of vertices, emitted object will not move as it supposed
to be.particle_error.blend

I found that the when I change the base object to simple geometry, it works anyway. But it has still weird glitches when animated scene.
(ex: particle placed in totally random position)

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

**System Information** Operating system: win8.1 64bit Graphics card: gtx 1060 4GB **Blender Version** Broken: blender-2.80-0661bcba3210-win64 28, Dec, 18 Worked: (optional) **Short description of error** when running keyed particle system, if the base object has complicated(?)mesh or rather say a lot of vertices, emitted object will not move as it supposed to be.[particle_error.blend](https://archive.blender.org/developer/F6096165/particle_error.blend) I found that the when I change the base object to simple geometry, it works anyway. But it has still weird glitches when animated scene. (ex: particle placed in totally random position) **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible).
Author

Added subscriber: @garyshin

Added subscriber: @garyshin
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Could you try to explain in more depth what you mean by "object will not move as it supposed"

I can happily add a particlesystem to complex_terrain object (with the same particlesettings as on the simpleplane object), change the second psys in Keys on the simpleplane and get somewhat expected movement?

Marking as incomplete until we have further information...

Could you try to explain in more depth what you mean by "object will not move as it supposed" I can happily add a particlesystem to `complex_terrain` object (with the same particlesettings as on the `simpleplane` object), change the second psys in Keys on the `simpleplane` and get somewhat expected movement? Marking as incomplete until we have further information...
Author

on a viewport both plane (complex_terrain, simpleplane) works well.

but when complex_terrain is the base for an animation, there's nothing on the rendered image.
(keyed particle objects are supposed to move toward the complex_terrain)

I rendered it as an animation (render animation) and set the file format to .png

on a viewport both plane (complex_terrain, simpleplane) works well. but when complex_terrain is the base for an animation, there's nothing on the rendered image. (keyed particle objects are supposed to move toward the complex_terrain) I rendered it as an animation (render animation) and set the file format to .png
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Can you still reproduce the issue in the newest Blender version?

I'm still not sure how to reproduce the bug. Please make a short screen recording that shows the issue.

Can you still reproduce the issue in the newest Blender version? I'm still not sure how to reproduce the bug. Please make a short screen recording that shows the issue.
Author

2019_01_23_09_40_13.avi

2019_01_23_09_32_11.avi

rendered with 2.79 version : 2019_01_23_09_40_13.avi
rendered with 2.8 build (blender-2.80.0-git.dd3f5186260e-windows64) : 2019_01_23_09_32_11.avi

Hope you understand through this video.

[2019_01_23_09_40_13.avi](https://archive.blender.org/developer/F6373150/2019_01_23_09_40_13.avi) [2019_01_23_09_32_11.avi](https://archive.blender.org/developer/F6373145/2019_01_23_09_32_11.avi) rendered with 2.79 version : 2019_01_23_09_40_13.avi rendered with 2.8 build (blender-2.80.0-git.dd3f5186260e-windows64) : 2019_01_23_09_32_11.avi Hope you understand through this video.

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB

I can confirm that when I change the settings so that the cubes should travel to the terrain, it shows up correctly in viewport, but the particles are all stuck to the emitter plane when I try to render.

@brecht who to assign this to (if any)?

I can confirm that when I change the settings so that the cubes should travel to the terrain, it shows up correctly in viewport, but the particles are all stuck to the emitter plane when I try to render. @brecht who to assign this to (if any)?
Sergey Sharybin was assigned by Sebastian Parborg 2019-01-28 10:13:10 +01:00

This issue was referenced by 8683a4ba40

This issue was referenced by 8683a4ba40831e1436edc889299f062659af6712

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59924
No description provided.